--- a/playbook.yaml
+++ b/playbook.yaml
@@ -5,14 +5,33 @@
   - name: 'Install requirements'
     apt:
       pkg:
-      - curl
       - apt-transport-https
       - ca-certificates
+      - curl 
       - software-properties-common
-      - python3-pip 
-      - virtualenv 
-      - python3-setuptools
       update_cache: yes
- 
-  
-     
+      
+  - name: 'Add Docker Apt Key'
+    apt_key: 
+      url: https://download.docker.com/linux/ubuntu/gpg
+      state: present
+      
+  - name: 'Add Docker Apt Repository'
+    apt_repository:
+       repo: deb [arch=amd64] https://download.docker.com/linux/ubuntu bionic stable
+       state: present
+       
+  - name: 'Update apt and install docker-ce'
+    apt: 
+      name: docker-ce
+      state: latest
+      update_cache: yes
+      
+   - name: 'Install Docker Module for Python'
+     pip:
+        name: docker  
+        
+    - name: 'Run Docker'
+      service:
+        name: docker
+        state: started
